force-app/main/default/objects/numm__SectionName__c/numm__SectionName__c.object-meta.xml
<CustomObject>
    <description>Objet de sections ou rubriques associées à un plan comptable, à l&#39;analytique ou aux immobilisations.</description>
    <label>Axe Rubrique</label>
    <nameField>
        <label>Axe rubrique</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Axes Rubriques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>