force-app/main/default/objects/numm__SectionName__c/fields/numm__IsFreeArea__c.field-meta.xml
<CustomField>
    <fullName>numm__IsFreeArea__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zone libre, non contrôlée.</description>
    <inlineHelpText>Zone libre, non contrôlée.</inlineHelpText>
    <label>Zone libre</label>
    <type>Checkbox</type>
</CustomField>