force-app/main/default/objects/numm__SectionName__c/fields/numm__IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>numm__IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligatoire</label>
    <type>Checkbox</type>
</CustomField>