force-app/main/default/objects/numm__SectionName__c/fields/numm__NumSection__c.field-meta.xml
<CustomField>
    <fullName>numm__NumSection__c</fullName>
    <description>De 1 a 10</description>
    <inlineHelpText>Numéro de l&#39;axe (numéros contigus par type d&#39;axe)</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>