force-app/main/default/objects/numm__SectionName__c/fields/numm__TECHNumTypeSection__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHNumTypeSection__c</fullName>
    <description>Pour vérifier l&#39;unicité du couple Numéro et type</description>
    <label>TECHTypeNumRub</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>