force-app/main/default/objects/numm__SectionName__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <description>Entité
Etablissement
Journal
Comptabilité générale
Comptabilité auxiliaire
Immobilisation</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immobilisation</fullName>
                <default>true</default>
                <label>Immobilisation</label>
            </value>
            <value>
                <fullName>Comptes généraux</fullName>
            </value>
            <value>
                <fullName>Comptabilité analytique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>