force-app/main/default/objects/numm__SectionName__c/validationRules/numm__TypeAxeRubriqueEtPosition_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__TypeAxeRubriqueEtPosition_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISBLANK(Text(numm__Type__c)),ISBLANK(Text(numm__NumSection__c) ))</errorConditionFormula>
    <errorMessage>Type d&#39;axe et position obligatoires</errorMessage>
</ValidationRule>