force-app/main/default/objects/numm__SectionName__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__Type__c</columns>
    <columns>numm__NumSection__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>